5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1735_2517.log
== TEST (2019-05-08 11:59:18) 
-- CODE:
x=float(input("Digite o valor incial da posição: "))
t=0
while(H>0):
	H=x-(1/2*(9.8**t))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(H>0):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 11:59:26) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
while(H>0):
	H=x-(1/2*(9.8**t))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(H>0):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 11:59:39) 
-- CODE:
x=float(input("Digite o valor incial da posicao: "))
t=0
H=0
while(H>0):
	H=x-(1/2*(9.8**t))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(H>0):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 11:59:56) 
-- CODE:
x=float(input("Digite o valor incial da posicao: "))
t=0
H=1
while(H>0):
	H=x-(1/2*(9.8**t))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- OUTPUT:
t = 0
h = 35.5
t = 1
h = 31.1
t = 2
h = -12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:00:55) 
-- CODE:
x=float(input("Digite o valor incial da posicao: "))
t=0
while(x>0):
	x=x-(1/2*(9.8**t))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("h =",(round(H,1)))
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:01:04) 
-- CODE:
x=float(input("Digite o valor incial da posicao: "))
t=0
while(x>0):
	x=x-(1/2*(9.8**t))
	print("t =",t)
	print("h =",(round(x,1)))
	t=t+1
	
	
-- OUTPUT:
t = 0
h = 35.5
t = 1
h = 30.6
t = 2
h = -17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:01:56) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
while(H>0):
	H=x-(1/2*(9.8*t**2))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:02:10) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
while(H>=0):
	H=x-(1/2*(9.8*t**2))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:02:40) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
while(H>0):
	H=x-(1/2*(9.8*t**2))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:03:29) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
while(H>0)and(H>-1):
	H=x-(1/2*(9.8*t**2))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 12:04:21) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
while(H>0)and(H>-1):
	H=x-(1/2*(9.8*t**2))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- EXECUTION TIME:
0.142527
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 0
h = 11.5
t = 1
h = 6.6
t = 2
h = -8.1
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
t = 16
h = -19.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:04:46) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
while(H>=0):
	H=x-(1/2*(9.8*t**2))
	print("t =",t)
	print("h =",(round(H,1)))
	t=t+1
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:07:56) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
z=0
while(H>=0):
	if(H<=0):
		z=54
	else:	
	   H=x-(1/2*(9.8*t**2))
	   print("t =",t)
	   print("h =",(round(H,1)))
	   t=t+1

	
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:16:46) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
z=0
while(H>0):
	if(H<=0):
		z=54
	else:	
	   H=x-(1/2*(9.8*t**2))
	   print("t =",t)
	   print("h =",(round(H,1)))
	   t=t+1

	
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:28) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
z=0
while(H>0):
	H=x-(1/2*(9.8*t**2))
	if(H<=0):
		z=54
	else:	
	   print("t =",t)
	   print("h =",(round(H,1)))
	   t=t+1

	
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:17:35) 
-- CODE:
x=float(input("Digite o valor incial da posicaoo: "))
t=0
H=1
z=0
while(H>0):
	H=x-(1/2*(9.8*t**2))
	if(H<=0):
		z=54
	else:	
	   print("t =",t)
	   print("h =",(round(H,1)))
	   t=t+1

	
	
	
-- EXECUTION TIME:
0.1931
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 0
h = 11.5
t = 1
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
